2005-07-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/CObject.java:
	Add stubbed out signatures for methods defined
	by the TclBlend version of CObject. These methods
	will never be called in Jacl.
	[Patch 875166]

2005-07-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Expression.java (ExprGetValue):
	Check for a subexpression that has no right hand
	operand and raise a syntax error if found.
	* tests/tcl/expr.test: Check for error condition.
	Thanks go to Jason Lohrey for this bug id and patch.
	[Bug 1071611]

2005-07-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Expression.java (ExprParseString):
	Fix ancient number parsing bug dealing with expr
	values. Expr should treat something that does not
	parse as an integer or double as a string. Expr
	was incorrectly raising an error for numbers that
	were out of range or did not look like integers.
	* tests/inprogress/ExprCmd.test:
	* tests/tcl/expr.test: Remove knownbug constraint
	since this number parse bug is now fixed.
	[Bug 879170]

2005-07-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/TclInteger.java
	(setIntegerFromAny): When converting a boolean
	to an integer, convert by reparsing the string
	rep unless the boolean has the string rep
	"0" or "1". It is possible that a valid
	integer like 10 would be converted to the
	boolean 1 and we would not want to convert
	that back to the integer 1.

2005-01-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* demos/gluepkg/JarCmd.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/NamespaceCmd.java:
	* src/jacl/tcl/lang/PackageCmd.java:
	* src/jacl/tcl/lang/SearchId.java:
	* src/jacl/tcl/lang/Var.java:
	* src/tcljava/tcl/lang/TclClassLoader.java:
	* src/tests/jacl/tcl/lang/TestChannelCmd.java:
	Replace use of variable identifier enum with
	e since enum is a reserved word in Java 1.5.

2004-11-20  Mo DeJong  <mdejong@users.sourceforge.net>
